--- a/package.json
+++ b/package.json
@@ -3,20 +3,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "1.0.6",
+    "@mui/material": "^5.10.16",
+    "firebase": "^9.14.0",
     "next": "latest",
+    "patch-package": "^6.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-icons": "^4.6.0",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "react-player": "^2.11.0",
+    "recoil": "^0.7.6",
+    "recoil-logger": "^1.2.0",
+    "recoilize": "^3.1.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-autofill": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/recoilize": "^0.8.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwind-scrollbar": "^2.0.1",
